gh-5200 Fix help text on rule screens